# Magma-Voxel-Engine

./: CMakeLists.txt  README.MD  run-engine.sh
shaders/: cube.frag  cube.vert
src/: Camera.cpp  Camera.h  camera.cpp  chunk.cpp  chunk.h  cube_renderer.cpp  cube_renderer.h  main.cpp  particle.h  shader.cpp  shader.h  voxel.h  voxel_chunk.cpp  voxel_chunk.h  voxel_utils.h  voxel_world.cpp  voxel_world.h
